# chat

./: .gitignore  CMakeLists.txt  Makefile  Massager  a.out  client  main.c  server  server.c  users
client/: Makefile  client
client/inc/: client.h
client/src/: client.c  command_api.c  command_controler.c  controller_command_response.c  create_struct.c  printer.c  response_server.c  socked_api.c  string_api.c
server/: Makefile  Massager  autoMake.sh  server  testSqlite  users
server/inc/: api_db.h  mDb.h  server.h
server/src/: a.out  command_controler.c  create_struct.c  db.c  dbRequest.c  get_request_SQL.c  main.c  openDB.c  response_server.c  server.c  users  work_struct.c
uclient/: Makefile  client
uclient/inc/: client.h
uclient/src/: client.c  command_controler.c  response_server.c  string_api.c
userver/: Makefile  Massager  Massager-journal  server
userver/inc/: api_db.h  server.h
userver/src/: command_controler.c  db.c  dbRequest.c  get_request_SQL.c  openDB.c  response_server.c  server.c  work_struct.c
utils/: api.h
utils/libmx/: Makefile
utils/libmx/inc/: libmx.h
utils/libmx/src/: mx_arrlen.c  mx_atoi.c  mx_binary_search.c  mx_concatenation.c  mx_count_arr_el.c  mx_count_char.c  mx_count_letters.c  mx_count_substr.c  mx_count_words.c  mx_count_words_space.c  mx_create_char_arr.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_list.c  mx_del_strarr.c  mx_file_to_str.c  mx_free_void_arr.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_is_odd.c  mx_is_positive.c  mx_is_space.c  mx_isalpha.c  mx_isdigit.c  mx_islower.c  mx_isspace.c  mx_isupper.c  mx_itoa.c  mx_linear_search.c  mx_list_size.c  mx_max.c  mx_memccpy.c  mx_memchr.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_mid.c  mx_multiple_number.c  (+31 more)
utils/mUtils/: Makefile
(+4 files in other folders)
